--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
 <title>PsychicCouscous</title>
 </head>
 <body>
-	<p style="font-family: sans-serif">Using Jenkins for Contineous Deployment.</p>
+	<p style="font-family: sans-serif">Using Jenkins for Contineous Deployment!</p>
 </body>
 </html>
